--- a/protocols/nftstorage-bridge/node/package.json
+++ b/protocols/nftstorage-bridge/node/package.json
@@ -23,6 +23,7 @@
     "helmet": "^6.0.0",
     "ipfs": "^0.63.5",
     "mongodb": "^4.6.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nft.storage": "^7.0.0"
   }
 }
