--- a/protocols/nftstorage-bridge/node/package.json
+++ b/protocols/nftstorage-bridge/node/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "express": "^4.17.2",
+    "file-type": "^18.0.0",
     "form-data": "^4.0.0",
     "helmet": "^6.0.0",
     "ipfs": "^0.63.5",
