--- a/protocols/web3storage-bounty/node/package.json
+++ b/protocols/web3storage-bounty/node/package.json
@@ -25,6 +25,7 @@
     "ipfs": "^0.63.5",
     "mongodb": "^4.6.0",
     "multer": "^1.4.5-lts.1",
-    "nft.storage": "^7.0.0"
+    "nft.storage": "^7.0.0",
+    "web3.storage": "^4.4.0"
   }
 }
