--- a/protocols/web3storage-bounty/ui/.env
+++ b/protocols/web3storage-bounty/ui/.env
@@ -1,3 +1,3 @@
 VUE_APP_CONTRACT_ADDRESS=0x3425534e95f6B5F06c70FBC5f563dd227b7B8CcA
-#VUE_APP_CACHE_NODE=https://w3-b.link
-VUE_APP_CACHE_NODE=http://localhost:3000
+VUE_APP_CACHE_NODE=https://w3-b.link
+#VUE_APP_CACHE_NODE=http://localhost:3000
