--- a/protocols/web3storage-bounty/node/.env.goerli
+++ b/protocols/web3storage-bounty/node/.env.goerli
@@ -5,3 +5,5 @@ MONGODB_DBNAME=w3s_bounty
 MONGODB_CONNECTION=mongodb://localhost:27017
 IPFS_GATEWAY=https://ipfs.io/ipfs/
 WEB3_STORAGE_KEY=<WEB3_STORAGE_KEY>
+ONCHAIN_API=<ONCHAIN_API_ENDPOINT>
+PROTOCOL_ID=web3bounty-polygon
