--- a/protocols/web3storage-bounty/ui/package.json
+++ b/protocols/web3storage-bounty/ui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@truffle/contract": "^4.5.7",
+    "@walletconnect/web3-provider": "^1.8.0",
     "alchemy-sdk": "^2.0.4",
     "api": "^4.5.2",
     "axios": "^0.26.1",
@@ -16,7 +17,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "web3": "^1.7.3"
+    "web3": "^1.7.3",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
