--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "clients-ui",
+  "name": "onchain-storage-app",
   "version": "0.1.0",
+  "author": {
+    "name": "Stefano Raniolo",
+    "email": "stefano@yomi.digital"
+  },
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
